// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests of initiate rectification Error if error reason and payload are not provided 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"requestReason\\" fails because [\\"requestReason\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "requestReason",
    ],
    "source": "body",
  },
}
`;

exports[`Tests of subject giving consent Should not allow a new subject to give consent without specifying the consented processors 1`] = `
Object {
  "error": "Bad Request",
  "message": "child \\"processors\\" fails because [\\"processors\\" is required]",
  "statusCode": 400,
  "validation": Object {
    "keys": Array [
      "processors",
    ],
    "source": "body",
  },
}
`;
